# lrc-research-prototype

./: README.md  pyproject.toml  requirements.txt
autonomous-box/: Automated Box Crash Incident.txt  claude_agent.py  main.py  memory.json  robot_controller.py
jarvis/: add_event.swift  bridge.sh  export_calendar.sh  export_messages.py  notify.sh  scan_messages.py  send_email.sh  send_text.sh
